<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    tools:context=".controllers.participants.AddParticipantActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/backFromAddParticipant"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_baseline_arrow_back_24"
                android:backgroundTint="@color/black"
                android:gravity="center"
                android:text=""
                android:textSize="36sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:layout_marginStart="16dp"
                android:text="@string/new_participant"
                android:gravity="start|center"
                android:textSize="36sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/addParticipantActivity_avatar"
                android:layout_width="118dp"
                android:layout_height="118dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_baseline_person_add_alt_1_24"
                android:contentDescription="@string/participant_avatar" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <EditText
                        android:id="@+id/addParticipantActivity_firstName"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:autofillHints="FirstName"
                        android:hint="@string/firstname"
                        android:inputType="text"
                        tools:ignore="SpeakableTextPresentCheck" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <EditText
                        android:id="@+id/addParticipantActivity_lastName"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:autofillHints="LastName"
                        android:hint="@string/lastname"
                        android:inputType="text"
                        tools:ignore="SpeakableTextPresentCheck" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </LinearLayout>





        <android.support.design.widget.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/addParticipantActivity_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints="Email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                tools:ignore="SpeakableTextPresentCheck" />

        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/addParticipantActivity_isInternal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:checked="true"
            android:minHeight="48dp"
            android:text="@string/lamzone_collaborator" />

        <android.support.design.widget.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/addParticipantActivity_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints="Login"
                android:hint="@string/login"
                android:inputType="text"
                tools:ignore="SpeakableTextPresentCheck" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/addParticipantActivity_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints="Password"
                android:hint="@string/password"
                android:inputType="textPassword"
                tools:ignore="SpeakableTextPresentCheck" />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/addParticipantActivity_participantCreate"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/MainColor"
            android:text="@string/create_participant"
            android:textColor="@color/white"
            android:textSize="24sp" />

    </LinearLayout>

</ScrollView>