...
            app:titleTextColor="@color/white"
            android:background="@color/MainColor"
            app:layout_scrollFlags="scroll|enterAlways"
            app:title="@string/app_name">

            <Button
                android:id="@+id/viewpager_meetingsFilter"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/ic_filter_white"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/filterbutton">
...

        </android.support.design.widget.TabLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="?attr/actionBarSize"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:contentDescription="@string/viewpager" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/viewpager_addMeeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:src="@drawable/ic_baseline_add_30"
        app:backgroundTint="@color/SecondaryColor"
        android:visibility="visible"
        android:contentDescription="@string/button">
    </android.support.design.widget.FloatingActionButton>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/viewpager_addUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        app:backgroundTint="@color/SecondaryColor"
        android:visibility="gone"
...
