...
        android:text="@string/login"
        android:gravity="bottom|center_horizontal"
        android:textSize="16sp"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/mainactivity_loginField"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@color/white"
        android:inputType="text"
...
        android:text="@string/password"
        android:gravity="bottom|center_horizontal"
        android:textSize="16sp"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/mainactivity_passwordField"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@color/white"
        android:inputType="textPassword"
...
        android:textSize="16sp"
        android:autofillHints="password"
        android:hint="@string/password"
        android:text="@string/_1234"/>

    <Button
        android:id="@+id/mainactivity_connexion"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@color/SecondaryColor"
...
